2005-05-08  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_movie.cpp (as_value): Cast wstr to be either 32
	or 16 bit based on the size of wchar_t.

2005-05-08  Rob Savoye  <rob@darkstar.welcomehome.org>

	* gameswf/gameswf_action.h: Cast the wide character to a uint32 so
	it'll compile.
	* gameswf/gameswf_xml.cpp (setupFrame): Don't set members for
	firstChild or childNodes, these are handled differently now. 
	* gameswf/gameswf_xml.h: Add virtual overload of get_member() to
	the xml_as_object and xmlnode_as_object to return firstChild and
	childNodes without creating a circular dependancy.
	

2005-05-05  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_timers.cpp (gameswf): If _start is trashed for
	some reason, assuming it's expired and then reset it. This should
	eventually be fixed once I figure out what's causing the
	problem. It takes about an hour to occur.
	* base/tu_timer.cpp (get_profile_ticks): Don't need the tz
	variable, as it's not used with gettimeofday() on Linux anymore.
	

2005-05-05  Rob Savoye  <rob@darkstar.welcomehome.org>

	* gameswf_string.cpp (string_new): Don't recreate the String
	object.
	* gameswf/gameswf_action.cpp (execute): Clear the members of an
	object on the stack when the 'with' stack frame returns to a
	higher level.

2005-05-05  Rob Savoye  <rob@darkstar.welcomehome.org>

	* gameswf/gameswf_render_handler_ogl.cpp (render_handler): Check
	in patch #1195922, making the workaround for the i810 OpenGL
	problem configurable.
	* configure.ac: Add -enable-i810-lod-bias to make workaround
	optional. Add descriptive text to AC_DEFINE(HAVE_WINSOCK)
	* configure, config.h.in: Regenerated.

2005-05-04  Rob Savoye  <rob@blackpeter.welcomehome.org>

	* gameswf/gameswf_render_handler_ogl.cpp (render_handler): Added
	and slightly changed patch #1194680. This code now only gets
	executed when using a non default value for the LOD BIAS.

2005-05-01  Rob Savoye  <rob@bertha.welcomehome.org>
