@@ -126,8 +126,14 @@ namespace gameswf
   }
 
   void
-  timer_setinterval(as_value* result, as_object_interface* this_ptr, as_environment* env, int nargs, int first_arg)
+  timer_setinterval(const fn_call& fn)
   {
+    as_value* result = fn.result;
+    //as_object_interface* this_ptr = fn.this_ptr;
+    int nargs = fn.nargs;
+    int first_arg = fn.first_arg_bottom_index;
+    as_environment* env = fn.env;
+
     int i;
     as_value	method;
     log_msg("%s: args=%d\n", __FUNCTION__, nargs);
@@ -179,8 +185,14 @@ namespace gameswf
   }
   
   void
-  timer_expire(as_value* result, as_object_interface* this_ptr, as_environment* env)
+  timer_expire(const fn_call& fn)
   {
+    as_value* result = fn.result;
+    as_object_interface* this_ptr = fn.this_ptr;
+    //int nargs = fn.nargs;
+    //int first_arg = fn.first_arg_bottom_index;
+    as_environment* env = fn.env;
+
     //log_msg("%s:\n", __FUNCTION__);
 
     timer_as_object*	ptr = (timer_as_object*) (as_object*) this_ptr;
@@ -197,8 +209,14 @@ namespace gameswf
   }
   
   void
-  timer_clearinterval(as_value* result, as_object_interface* this_ptr, as_environment* env, int nargs, int first_arg)
+  timer_clearinterval(const fn_call& fn)
   {
+    as_value* result = fn.result;
+    //as_object_interface* this_ptr = fn.this_ptr;
+    //int nargs = fn.nargs;
+    int first_arg = fn.first_arg_bottom_index;
+    as_environment* env = fn.env;
+
     //log_msg("%s: nargs = %d\n", __FUNCTION__, nargs);
 
     double id = env->bottom(first_arg).to_number();
